# premier-league-final-table-predictor

./: .gitignore  README.md  backup.md  requirements.txt
AssignmentEvidence/: ExploratoryAnalysis.md
Transformation/: bronze_to_silver.ipynb  silver_to_gold.ipynb
app/: main.py  pyproject.toml
app/static/: style.css
app/templates/: index.html
data/: feature_importance.csv  model_predictions_2024_25.csv
data/Gold/: training_features.csv
data/Silver/: team_season_stats.csv
data/bronze/: pl_matches_historical.csv  pl_standings_2023.csv  pl_standings_2024.csv
src/Training/: Training.ipynb  rf_model_2024_25.joblib
src/ingestion/: DataSet1.ipynb  DataSet2.ipynb  ExploratoryAnalysis.ipynb
