[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "jinja2>=3.1.0",
    "joblib>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.1.0",
    "pydantic>=1.10.0",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.3.0",
    "uvicorn>=0.24.0",
]
